commit brefore branching to add media

--- a/MRUI/CMakeLists.txt
+++ b/MRUI/CMakeLists.txt
@@ -11,8 +11,14 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+set(QT_DIR /home/josue/Qt/6.4.0/gcc_64/lib/cmake/Qt6)
+set(Qt6_DIR /home/josue/Qt/6.4.0/gcc_64/lib/cmake/Qt6)
+set(Qt6CoreTools_DIR /home/josue/Qt/6.4.0/gcc_64/lib/cmake/Qt6CoreTools/)
+set(Qt6GuiTools_DIR /home/josue/Qt/6.4.0/gcc_64/lib/cmake/Qt6GuiTools/)
+
+find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core Gui Multimedia MultimediaWidgets Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Gui Multimedia MultimediaWidgets Widgets)
+
 
 set(PROJECT_SOURCES
         main.cpp
@@ -47,6 +53,7 @@ else()
 endif()
 
 target_link_libraries(MRUI PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+
 
 set_target_properties(MRUI PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
