added switch video input functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "qwidget": "cpp",
         "qvideowidget": "cpp",
         "qaudioinput": "cpp",
-        "qmediacapturesession": "cpp"
+        "qmediacapturesession": "cpp",
+        "qcamera": "cpp"
     }
 }
