--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "qvideowidget": "cpp",
         "qaudioinput": "cpp",
         "qmediacapturesession": "cpp",
-        "qcamera": "cpp"
+        "qcamera": "cpp",
+        "qmediadevices": "cpp"
     }
 }
