composed main window into view as 'watcher'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "qmediacapturesession": "cpp",
         "qcamera": "cpp",
         "qmediadevices": "cpp",
-        "qmediametadata": "cpp"
+        "qmediametadata": "cpp",
+        "qdockwidget": "cpp"
     }
 }
