created classes to refactorize

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
         "qcamera": "cpp",
         "qmediadevices": "cpp",
         "qmediametadata": "cpp",
-        "qdockwidget": "cpp"
+        "qdockwidget": "cpp",
+        "qfileinfo": "cpp",
+        "string_view": "cpp"
     }
 }
